--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   the pitch.
 -->
 <p>
-  <a href="{{site.swc_site}}"> Avida is a free, open source scientific software platform for 
+  <a href="http://avida.devosoft.org/">Avida</a> is a free, open source scientific software platform for 
   conducting and analyzing experiments with self-replicating and evolving computer programs. 
   It provides detailed control over experimental settings and protocols, a large array of measurement tools, 
   and sophisticated methods to analyze and post-process experimental data. As a very different instantiation of
@@ -64,7 +64,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
 But we know Avida can have a steep learning curve. A big part of that, especially for people with a less computational 
 background, is that there are a lot of computational skills that are necessary (or at least highly useful) for 
 running experiments in Avida. Increasingly, these skills are also useful for scientific computing more generally.
-That's why we created this workshop: a Software Carpentry workshop with a focus on getting participants up and
+That's why we created this workshop: a  <a href="{{site.swc_site}}"> Software Carpentry</a> workshop with a focus on getting participants up and
 running with Avida. Software Carpentry is a series of workshops with the mission of helping scientists and 
 engineers get more research done in less time and with less pain by teaching them these skills for scientific 
 computing. This hands-on workshop will cover basic concepts and tools, including program design, version control,
@@ -75,9 +75,13 @@ a compute cluster, and analyze the results.
 
 <p align="center">
   <em>
-    For more information on what we teach and why,
+    For more information on what we teach in Software Carpentry and why,
     please see our paper
     "<a href="http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001745">Best Practices for Scientific Computing</a>".
+  </em>
+  <em>
+    For more information about current work with Avida (or to read out blog!), see 
+    "<a href="http://devolab.msu.edu/">the Digital Evolution Lab website</a>".
   </em>
 </p>
 
