--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ country: United-States    # country (two-letter ISO code such as "fr" - see http
 language: en   # language (two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
 latlng: 42.724158, -84.476167     # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
 humandate: Oct 17-18, 2015  # human-readable date (e.g., "Feb 17-18, 2020")
-humantime: 9:00am - 4:30 pm Saturday, 9:00am - 3:30pm Sunday  # human-readable time (e.g., "9:00 am - 4:30 pm")
+humantime: 9:00am - 4:30 pm Saturday <br> 9:00am - 3:30pm Sunday  # human-readable time (e.g., "9:00 am - 4:30 pm")
 startdate: 2015-10-17  # use YYYY-MM-DD format like "2015-01-01"
 enddate: 2015-10-18    # use YYYY-MM-DD format like" 2015-01-02"
 instructor: ["Cliff Bohm", "Josh Nahum", "Emily Dolson"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
@@ -59,7 +59,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   evolution from biological evolution, Avida can often function as a way of testing the generality of evolutionary
   hypotheses. In addition, Avida's fast generation times and complete information about evolutionary trajectories can
   make it possible to test hypotheses that would be intractable in most biological systems.
-
+</p>
 <p>
 But we know Avida can have a steep learning curve. A big part of that, especially for people with a less computational 
 background, is that there are a lot of computational skills that are necessary (or at least highly useful) for 
@@ -72,7 +72,7 @@ data management, and task automation. We will also apply all of these general co
 working with Avida; over the course of the workshop, participants will configure a run of Avida, submit it to
 a compute cluster, and analyze the results.
 </p>
-
+<br>
 <p align="center">
   <em>
     For more information on what we teach in Software Carpentry and why,
