Made audience more inclusive with obscure reference

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ a compute cluster, and analyze the results.
   </em>
   <em>
     For more information about current work with Avida (or to read out blog!), see 
-    "<a href="http://devolab.msu.edu/">the Digital Evolution Lab website</a>".
+    <a href="http://devolab.msu.edu/">the Digital Evolution Lab website</a>.
   </em>
 </p>
 
@@ -94,7 +94,7 @@ a compute cluster, and analyze the results.
 <p>
   <strong>Who:</strong>
   This course is aimed at people of all levels, from undergraduates to professors and 
-  everywhere in between, who are interested in learning how to use the Avida Digital Evolution 
+  anywhere betwixt, between, or beyond, who are interested in learning how to use the Avida Digital Evolution 
   platform for their research (or personal gratification!). We will also be covering skills for scientific computing
   more generally (see full syllabus below), which we expect will be helpful in your work beyond Avida as well. 
   <strong>You don't need to have any previous knowledge of the tools that will
