Updated Avida section of syllabus

--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@ a compute cluster, and analyze the results.
       <li>A brief history of Avida research</li>
       <li>Getting Avida running on your computer</li>
       <li>Planning, setting up, and running Avida experiments</li>
+      <li>Collecting and analyzing Avida data</li>
       <li>Common configurations to build off of</li>
       <li>Contributing to Avida</li>
     </ul>
