--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ a compute cluster, and analyze the results.
 <b> Note about high-performance computing acces:</b> Since we want this to be as hands-on as possible, and running Avida
 experiments on your laptop is not a viable long-term strategy, we strongly encourage you to get access to your
 University's high-performance computing facilities ahead of time. If you're affiliated with Michigan State
-Univeristy, then your best best is the <a href="https://icer.msu.edu/hpcc">HPCC</a>. You can get an account by
+Univeristy, then your best bet is the <a href="https://icer.msu.edu/hpcc">HPCC</a>. You can get an account by
 <a href="https://contact.icer.msu.edu/account">sending in a request </a> with a short summary of the research that 
 you're interested in using the HPCC to do. Note that you must be a PI to submit a request. If you are a grad student,
 your PI should be able to submit a request on your behalf. If you aren't affiliated with MSU or are having problems,
