--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ a compute cluster, and analyze the results.
 <p>
 	<strong>Interested?</strong> If you want to participate in this workshop,
 	or be notified if we do a similar workshop in the future, please RSVP
-	<a href="https://docs.google.com/forms/d/19DSdEDR63poFrgwBayfTP0hZaRBs8SfxwWohrTsBQXY/viewform?usp=send_form" here</a>.
+	<a href="https://docs.google.com/forms/d/19DSdEDR63poFrgwBayfTP0hZaRBs8SfxwWohrTsBQXY/viewform?usp=send_form"> here</a>.
 </p>
 
 <p>
