Added filezilla section

--- a/index.html
+++ b/index.html
@@ -428,6 +428,18 @@ e-mail us and we'll figure something out.
   </div>
 </div> <!-- End of 'Git' section. -->
 
+<div id="filezilla"> <!-- Start of 'shell' section. -->
+  <h3>Filezilla</h3>
+
+  <p>
+    Filezilla is a convenient interface for moving files between your computer and a computing cluster. 
+    Regardless of which operating system you're using, you should be able to download and install a version
+    <a href="https://filezilla-project.org/">here</a>.
+  </p>
+
+</div> <!-- End of 'filezille' section. -->
+
+
 <div id="editor"> <!-- Start of 'editor' section. -->
   <h3>Text Editor</h3>
 
