--- a/index.html
+++ b/index.html
@@ -173,19 +173,19 @@ a compute cluster, and analyze the results.
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td>Intro to Avida</td> </tr>
+      <tr> <td>9:30</td>  <td>Finding your way around the Unix Shell</td> </tr>
       <tr> <td>10:30</td> <td>Coffee</td> </tr>
-      <tr> <td>10:45</td>  <td>Automating tasks with the Unix Shell</td> </tr>
+      <tr> <td>10:45</td>  <td>Using a computing cluster</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>1:00</td>  <td>Using the Unix Shell to run Avida</td> </tr>
-      <tr> <td>2:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>2:45</td>  <td>Building programs with Python</td> </tr>
-      <tr> <td>4:00</td>  <td>Wrap-up </td> </tr>
+      <tr> <td>1:00</td>  <td>Doing simple experiments in Avida</td> </tr>
+      <tr> <td>2:00</td>  <td>Coffee</td> </tr>
+      <tr> <td>2:15</td>  <td>Version control with Git</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version control with Git</td> </tr>
+      <tr> <td>09:00</td>  <td>Analyzing data with Python</td> </tr>
       <tr> <td>10:30</td>  <td>Coffee</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
       <tr> <td>1:00</td>  <td>Analyzing data with Python</td> </tr>
