--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ country: United-States    # country (two-letter ISO code such as "fr" - see http
 language: en   # language (two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
 latlng: 42.724158, -84.476167     # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
 humandate: Oct 17-18, 2015  # human-readable date (e.g., "Feb 17-18, 2020")
-humantime: 9:00am - 4:30 pm Saturday <br> 9:00am - 3:30pm Sunday  # human-readable time (e.g., "9:00 am - 4:30 pm")
+humantime: 9:00am - 4:30 pm Saturday <br> 9:00am - 4:00pm Sunday  # human-readable time (e.g., "9:00 am - 4:30 pm")
 startdate: 2015-10-17  # use YYYY-MM-DD format like "2015-01-01"
 enddate: 2015-10-18    # use YYYY-MM-DD format like" 2015-01-02"
 instructor: ["Cliff Bohm", "Josh Nahum", "Emily Dolson"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
@@ -166,7 +166,7 @@ a compute cluster, and analyze the results.
   to match your plans.  You may also want to change 'Day 1' and 'Day
   2' to be actual dates or days of the week.
 -->
-<h2>Schedule - SUBJECT TO REARRANGEMENT</h2>
+<h2>Schedule - subject to change</h2>
 
 <div class="row">
   <div class="col-md-6">
@@ -178,8 +178,9 @@ a compute cluster, and analyze the results.
       <tr> <td>10:45</td>  <td>Using a computing cluster</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
       <tr> <td>1:00</td>  <td>Doing simple experiments in Avida</td> </tr>
-      <tr> <td>2:00</td>  <td>Coffee</td> </tr>
-      <tr> <td>2:15</td>  <td>Version control with Git</td> </tr>
+      <tr> <td>2:00</td>  <td>Version control with Git</td> </tr>
+      <tr> <td>3:15</td>  <td>Coffee</td> </tr>
+      <tr> <td>3:30</td>  <td>More Git</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
@@ -188,9 +189,10 @@ a compute cluster, and analyze the results.
       <tr> <td>09:00</td>  <td>Analyzing data with Python</td> </tr>
       <tr> <td>10:30</td>  <td>Coffee</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>1:00</td>  <td>Analyzing data with Python</td> </tr>
-      <tr> <td>2:15</td>  <td>Coffee</td> </tr>
-      <tr> <td>2:30</td>  <td>Avida in depth</td> </tr>
+      <tr> <td>1:00</td>  <td>More Python</td> </tr>
+      <tr> <td>2:00</td>  <td>Avida in depth</td> </tr>
+      <tr> <td>3:00</td>  <td>Coffee</td> </tr>
+      <tr> <td>2:00</td>  <td>More Avida</td> </tr>
     </table>
   </div>
 </div>
@@ -245,10 +247,8 @@ a compute cluster, and analyze the results.
       <li>Files and directories</li>
       <li>History and tab completion</li>
       <li>Pipes and redirection</li>
-      <li>Looping over files</li>
-      <li>Creating and running shell scripts</li>
-      <li>Finding things</li>
       <li>Connecting to high performance clusters</li>
+      <li>Running jobs on high performance clusters</li>
       <li><a href="{{site.swc_githubio}}/shell-novice/reference.html">Reference...</a></li>
     </ul>
   </div>
@@ -320,7 +320,7 @@ a compute cluster, and analyze the results.
   need an up-to-date web browser. 
 </p>
 <p>
-<b> Note about high-performance computing acces:</b> Since we want this to be as hands-on as possible, and running Avida
+<b> Note about high-performance computing access:</b> Since we want this to be as hands-on as possible, and running Avida
 experiments on your laptop is not a viable long-term strategy, we strongly encourage you to get access to your
 University's high-performance computing facilities ahead of time. If you're affiliated with Michigan State
 Univeristy, then your best bet is the <a href="https://icer.msu.edu/hpcc">HPCC</a>. You can get an account by
