--- a/index.html
+++ b/index.html
@@ -536,8 +536,11 @@ e-mail us and we'll figure something out.
       <h4 id="python-windows">Windows</h4>
       <ol>
         <li>Open <a href="http://continuum.io/downloads">http://continuum.io/downloads</a> with your web browser.</li>
-        <li>Click on "I want Python 3.X" link.</li>
-        <li>Download this Python 3 installer.</li>
+        <li>Scroll down to the "Python for Windows" section.</li>
+        <li>If you have a 64-bit computer, click on the blue "Windows 64-bit Graphical Installer" button 
+        in the <b>"PYTHON 3.4"</b> column (on the right). If you have a 32-bit computer, click on the 
+        blue text under the button that says "Windows 32-bit Graphical Installer". If you don't know whether your
+        computer is 32 or 64 bit, go <a href="https://support.microsoft.com/en-us/kb/827218">here</a> to find out.</li>
         <li>Install Python 3 using all of the defaults for installation <em>except</em> make sure to check <strong>Make Anaconda the default Python</strong>.</li>
       </ol>
     </div>
