Updated all python install instructions

--- a/index.html
+++ b/index.html
@@ -536,11 +536,29 @@ e-mail us and we'll figure something out.
       <h4 id="python-windows">Windows</h4>
       <ol>
         <li>Open <a href="http://continuum.io/downloads">http://continuum.io/downloads</a> with your web browser.</li>
-        <li>Scroll down to the "Python for Windows" section.</li>
+        <li>Scroll down to the "Anaconda for Windows" section.</li>
         <li>If you have a 64-bit computer, click on the blue "Windows 64-bit Graphical Installer" button 
         in the <b>"PYTHON 3.4"</b> column (on the right). If you have a 32-bit computer, click on the 
         blue text under the button that says "Windows 32-bit Graphical Installer". If you don't know whether your
         computer is 32 or 64 bit, go <a href="https://support.microsoft.com/en-us/kb/827218">here</a> to find out.</li>
+        <li>This will download the installer. Open it, and install Python 3 using all of the defaults for installation <em>except</em> make sure to check <strong>Make Anaconda the default Python</strong>.</li>
+      </ol>
+    </div>
+    <div class="col-md-4">
+      <h4 id="python-macosx">Mac OS X</h4>
+      <ol>
+        <li>Open <a href="http://continuum.io/downloads">http://continuum.io/downloads</a> with your web browser.</li>
+        <li>Scroll down to the "Anaconda for OS X" section.</li>
+        <li>Click on the blue "Mac OS X 64-bit Graphical Installer" button in the <b>"PYTHON 3.4"</b> column (on the right).</li>
+        <li>This will download the installer. Open it, and install Python 3 using all of the defaults for installation <em>except</em> make sure to check <strong>Make Anaconda the default Python</strong>.</li>
+      </ol>
+    </div>
+    <div class="col-md-4">
+      <h4 id="python-linux">Linux</h4>
+      </p>
+      <ol>
+        <li>Open <a href="http://continuum.io/downloads">http://continuum.io/downloads</a> with your web browser.</li>
+        <li>Download the Python 3 installer for Windows.</li>
         <li>Install Python 3 using all of the defaults for installation <em>except</em> make sure to check <strong>Make Anaconda the default Python</strong>.</li>
       </ol>
     </div>
@@ -548,8 +566,7 @@ e-mail us and we'll figure something out.
       <h4 id="python-macosx">Mac OS X</h4>
       <ol>
         <li>Open <a href="http://continuum.io/downloads">http://continuum.io/downloads</a> with your web browser.</li>
-        <li>Click on "I want Python 3.X" link.</li>
-        <li>Download this Python 3 installer.</li>
+        <li>Download the Python 3 installer for OS X.</li>
         <li>Install Python 3 using all of the defaults for installation.</li>
       </ol>
     </div>
@@ -558,8 +575,7 @@ e-mail us and we'll figure something out.
       </p>
       <ol>
         <li>Open <a href="http://continuum.io/downloads">http://continuum.io/downloads</a> with your web browser.</li>
-        <li>Click on "I want Python 3.X" link.</li>
-        <li>Download this Python 3 installer, save it in your home folder.</li>
+        <li>Download the Python 3 installer for Linux.</li>
         <li>Install Python 3 using all of the defaults for installation.
         (Installation requires using the shell. If you aren't
         comfortable doing the installation yourself
