Updated schedule and etherpad

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ enddate: 2015-10-18    # use YYYY-MM-DD format like" 2015-01-02"
 instructor: ["Cliff Bohm", "Josh Nahum", "Emily Dolson"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 helper: ["Alex Lalejini"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: dolsonem@msu.edu    # contact email address for workshop organizer, such as "grace@hopper.org"
-etherpad: https://etherpad.mozilla.org/avida-msu-10-17-2015     # optional (insert the URL for your Etherpad if you're using one)
+etherpad: http://pad.software-carpentry.org/2015-10-16-avida     # optional (insert the URL for your Etherpad if you're using one)
 eventbrite:       # optional (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
 ---
 <!--
@@ -166,20 +166,21 @@ a compute cluster, and analyze the results.
   to match your plans.  You may also want to change 'Day 1' and 'Day
   2' to be actual dates or days of the week.
 -->
-<h2>Schedule - subject to change</h2>
+<h2>Schedule</h2>
 
 <div class="row">
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Intro to Avida</td> </tr>
-      <tr> <td>9:30</td>  <td>Finding your way around the Unix Shell</td> </tr>
-      <tr> <td>10:30</td> <td>Coffee</td> </tr>
+      <tr> <td>9:00</td>  <td>Introductions and Overview</td> </tr>
+      <tr> <td>9:30</td>  <td>Avida from 10,000 feet</td> </tr>
+      <tr> <td>10:00</td>  <td>Finding your way around the Unix Shell</td> </tr>
+      <tr> <td>10:30</td> <td>Break</td> </tr>
       <tr> <td>10:45</td>  <td>Using a computing cluster</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
       <tr> <td>1:00</td>  <td>Doing simple experiments in Avida</td> </tr>
       <tr> <td>2:00</td>  <td>Version control with Git</td> </tr>
-      <tr> <td>3:15</td>  <td>Coffee</td> </tr>
+      <tr> <td>3:15</td>  <td>Break</td> </tr>
       <tr> <td>3:30</td>  <td>More Git</td> </tr>
     </table>
   </div>
@@ -189,10 +190,10 @@ a compute cluster, and analyze the results.
       <tr> <td>09:00</td>  <td>Analyzing data with Python</td> </tr>
       <tr> <td>10:30</td>  <td>Coffee</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>1:00</td>  <td>More Python</td> </tr>
-      <tr> <td>2:00</td>  <td>Avida in depth</td> </tr>
-      <tr> <td>3:00</td>  <td>Coffee</td> </tr>
-      <tr> <td>2:00</td>  <td>More Avida</td> </tr>
+      <tr> <td>1:00</td>  <td>Advanced topics in Avida</td> </tr>
+      <tr> <td>2:30</td>  <td>Coffee</td> </tr>
+      <tr> <td>2:45</td>  <td>More Avida</td> </tr>
+      <tr> <td>3:30</td>  <td>Wrap up</td> </tr>
     </table>
   </div>
 </div>
@@ -238,7 +239,7 @@ a compute cluster, and analyze the results.
   please preview your site before committing, and make sure to run
   'tools/check' as well.
 -->
-<h2>Rough Syllabus (subject to change - let us know if there's something specific that you want to learn!)</h2>
+<h2>Syllabus</h2>
 
 <div class="row">
   <div class="col-md-6">
