--- a/index.html
+++ b/index.html
@@ -188,10 +188,11 @@ a compute cluster, and analyze the results.
     <h3>Day 2</h3>
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td>Analyzing data with Python</td> </tr>
-      <tr> <td>10:30</td>  <td>Coffee</td> </tr>
+      <tr> <td>10:30</td>  <td>Break</td> </tr>
+      <tr> <td>10:45</td>  <td>More Pythong</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
       <tr> <td>1:00</td>  <td>Advanced topics in Avida</td> </tr>
-      <tr> <td>2:30</td>  <td>Coffee</td> </tr>
+      <tr> <td>2:30</td>  <td>Break</td> </tr>
       <tr> <td>2:45</td>  <td>More Avida</td> </tr>
       <tr> <td>3:30</td>  <td>Wrap up</td> </tr>
     </table>
