--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ a compute cluster, and analyze the results.
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td>Analyzing data with Python</td> </tr>
       <tr> <td>10:30</td>  <td>Break</td> </tr>
-      <tr> <td>10:45</td>  <td>More Pythong</td> </tr>
+      <tr> <td>10:45</td>  <td>More Python</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
       <tr> <td>1:00</td>  <td>Advanced topics in Avida</td> </tr>
       <tr> <td>2:30</td>  <td>Break</td> </tr>
