--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@ a compute cluster, and analyze the results.
     <table class="table table-striped">
       <tr> <td>9:00</td>  <td>Introductions and Overview</td> </tr>
       <tr> <td>9:30</td>  <td>Avida from 10,000 feet</td> </tr>
-      <tr> <td>10:00</td>  <td>Finding your way around the Unix Shell</td> </tr>
+      <tr> <td>10:00</td>  <td> <a href="http://emilydolson.github.io/shell-novice-avida/">Finding your way around the Unix Shell</a></td> </tr>
       <tr> <td>10:30</td> <td>Break</td> </tr>
-      <tr> <td>10:45</td>  <td>Using a computing cluster</td> </tr>
+      <tr> <td>10:45</td>  <td><a href="http://emilydolson.github.io/shell-novice-avida/">Using a computing cluster</a></td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>1:00</td>  <td>Doing simple experiments in Avida</td> </tr>
+      <tr> <td>1:00</td>  <td><a href="http://emilydolson.github.io/shell-novice-avida/">Doing simple experiments in Avida</a></td> </tr>
       <tr> <td>2:00</td>  <td>Version control with Git</td> </tr>
       <tr> <td>3:15</td>  <td>Break</td> </tr>
       <tr> <td>3:30</td>  <td>More Git</td> </tr>
@@ -251,7 +251,7 @@ a compute cluster, and analyze the results.
       <li>Pipes and redirection</li>
       <li>Connecting to high performance clusters</li>
       <li>Running jobs on high performance clusters</li>
-      <li><a href="{{site.swc_githubio}}/shell-novice/reference.html">Reference...</a></li>
+      <li><a href="http://emilydolson.github.io/shell-novice-avida/reference.html">Reference...</a></li>
     </ul>
   </div>
   <div class="col-md-6">
