Added matplotlib reference

--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@ a compute cluster, and analyze the results.
       <li>Defensive programming</li>
       <li>Using Python from the command line</li>
       <li><a href="{{site.swc_githubio}}/python-novice-inflammation/reference.html">Reference...</a></li>
+      <li><a href="MatPlotLib_PlotStyles.png"> Matplotlib reference </a></li>
     </ul>
   </div>
 </div>
