--- a/index.html
+++ b/index.html
@@ -179,17 +179,17 @@ a compute cluster, and analyze the results.
       <tr> <td>10:45</td>  <td><a href="http://emilydolson.github.io/shell-novice-avida/">Using a computing cluster</a></td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
       <tr> <td>1:00</td>  <td><a href="http://emilydolson.github.io/shell-novice-avida/">Doing simple experiments in Avida</a></td> </tr>
-      <tr> <td>2:00</td>  <td>Version control with Git</td> </tr>
+      <tr> <td>2:00</td>  <td><a href="http://swcarpentry.github.io//git-novice/index.html">Version control with Git</a></td> </tr>
       <tr> <td>3:15</td>  <td>Break</td> </tr>
-      <tr> <td>3:30</td>  <td>More Git</td> </tr>
+      <tr> <td>3:30</td>  <td><a href="http://swcarpentry.github.io//git-novice/index.html">More Git</a></td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Analyzing data with Python</td> </tr>
+      <tr> <td>09:00</td>  <td><a href="http://swcarpentry.github.io//python-novice-inflammation/index.html">Analyzing data with Python</a></td> </tr>
       <tr> <td>10:30</td>  <td>Break</td> </tr>
-      <tr> <td>10:45</td>  <td>More Python</td> </tr>
+      <tr> <td>10:45</td>  <td><a href="http://swcarpentry.github.io//python-novice-inflammation/index.html">More Python</a></td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
       <tr> <td>1:00</td>  <td>Advanced topics in Avida</td> </tr>
       <tr> <td>2:30</td>  <td>Break</td> </tr>
@@ -266,6 +266,7 @@ a compute cluster, and analyze the results.
       <li>Using Python from the command line</li>
       <li><a href="{{site.swc_githubio}}/python-novice-inflammation/reference.html">Reference...</a></li>
       <li><a href="MatPlotLib_PlotStyles.png"> Matplotlib reference </a></li>
+      <li><a href="https://github.com/nahumj/py_graph"> Scripts from the graphing section </a></li>
     </ul>
   </div>
 </div>
